Crypto now extracts username.